; ModuleID = '/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_ctl.c_tb_cfg_request_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thunderbolt/extr_ctl.c_tb_cfg_request_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tb_cfg_request = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tb_cfg_request* @tb_cfg_request_alloc() #0 {
  %1 = alloca %struct.tb_cfg_request*, align 8
  %2 = alloca %struct.tb_cfg_request*, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.tb_cfg_request* @kzalloc(i32 4, i32 %3)
  store %struct.tb_cfg_request* %4, %struct.tb_cfg_request** %2, align 8
  %5 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %2, align 8
  %6 = icmp ne %struct.tb_cfg_request* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store %struct.tb_cfg_request* null, %struct.tb_cfg_request** %1, align 8
  br label %13

8:                                                ; preds = %0
  %9 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %2, align 8
  %10 = getelementptr inbounds %struct.tb_cfg_request, %struct.tb_cfg_request* %9, i32 0, i32 0
  %11 = call i32 @kref_init(i32* %10)
  %12 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %2, align 8
  store %struct.tb_cfg_request* %12, %struct.tb_cfg_request** %1, align 8
  br label %13

13:                                               ; preds = %8, %7
  %14 = load %struct.tb_cfg_request*, %struct.tb_cfg_request** %1, align 8
  ret %struct.tb_cfg_request* %14
}

declare dso_local %struct.tb_cfg_request* @kzalloc(i32, i32) #1

declare dso_local i32 @kref_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
